# dockmaster

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  build-requirements.txt  dev-requirements.txt  flask_config.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.cfg.sh
notebooks/: Authentication.ipynb
src/dockmaster/: __init__.py  configuration.py  logger_config.py  main.py  schemas.py  settings_config.py  utils.py
src/dockmaster/assets/js/: app.js
src/dockmaster/authenticate/: __init__.py  google.py
src/dockmaster/flask_dev/: app.py
src/dockmaster/flask_dev/assets/css/: site.css
src/dockmaster/flask_dev/authentication/: login.py
src/dockmaster/session/: __init__.py  manager.py  memory_session.py  schemas.py
src/dockmaster/templates/: index.html
src/dockmaster/tokens/: __init__.py
tests/: test_google.py  test_memory_session.py
