[metadata]
name = dockmaster
version = 0.0.2
author = Nick Grundl
author_email = "Nick Grundl" <nicholasgrundl@gmail.com>
maintainer = Nick Grundl
maintainer_email = "Nick Grundl" <nicholasgrundl@gmail.com>
description = Python package for Authentication and Authorization microservice.
license = Apache License 2.0
url = https://github.com/NicholasGrundl/dockmaster

[options]
packages_dir = 
	=src
packages = find:
include_package_data = True
install_requires =
	#general
	httpx
	click
	isodate
	python-dotenv
	
	#datamodel
	pydantic
	pydantic-settings
	
	#service
	fastapi[standard]
	uvicorn[standard]
	flask
	
	#jwt and cryptography
	passlib[bcrypt]
	python-jose[cryptography]
	Authlib
	
	# google sso
	google-auth
	google-api-python-client
	google-cloud-secret-manager
	

[options.package_data]
* = *.json, *.yaml, *.csv

[options.packages.find]
where=src

[coverage:run]
branch = True
